Player can now use model from disk, including a pretty bad model generated on Colab

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 
 install:
   - pip install -r requirements.txt
+  - pip install tensorflow
 
 script:
   - python -m unittest discover -s tests -t tests
