--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,12 @@ language: python
 
 python:
   - "3.6"
+  - "3.7"
 
 install:
   - pip install -r requirements.txt
   - pip install tensorflow
+  - ./download_engame_tablebases.sh
 
 script:
   - python -m unittest discover -s tests -t tests
